build/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin-demo
  template:
    metadata:
      labels:
        app: gin-demo
    spec:
      containers:
      - name: gin-demo
        image: 10.0.0.2:5000/gin-demo:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: "/etc/gin-demo"
      volumes:
      - name: config
        configMap:
          name: gin-demo-config
---
apiVersion: v1
kind: Service
metadata:
  name: gin-demo
spec:
  type: NodePort
  selector:
    app: gin-demo
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
