build/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gin-demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: test.local.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gin-demo
            port:
              number: 8080
